--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5" />
     <meta name="theme-color" content="#4F46E5" />
     <meta name="description" content="Sistem Informasi Akademik - SINFOMIK untuk manajemen nilai dan data siswa" />
+    <meta name="msapplication-TileColor" content="#4F46E5" />
+    <meta name="msapplication-TileImage" content="%PUBLIC_URL%/logo-binekas.png" />
+    <meta name="msapplication-config" content="%PUBLIC_URL%/browserconfig.xml" />
     
     <!-- PWA Meta Tags -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo-binekas.png" />
