--- a/frontend/src/test-chart.html
+++ b/frontend/src/test-chart.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Recharts</title>
+    <title>Tes Recharts</title>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -25,7 +25,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>🧪 Test Recharts - BUDAYA JABAR</h1>
+        <h1>🧪 Tes Recharts - BUDAYA JABAR</h1>
         <div id="root"></div>
     </div>
 
